@@ -1,3 +1,7 @@
+* 2014-06-11 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 33066: Fall back to an empty JSON object on encountered exceptions during deserialization  
+
 * 2014-06-06 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 32865: Don't anticipate upcoming ACKNOWLEDGE for the new version of server-side executed EDIT action 
